// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem matches saved snapshot 1`] = `
<li
  className="list-item"
  data-testid="test-list-item-test-container"
>
  <input
    data-testid="test-list-item-test"
    id="list-item-test"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="list-item-test"
  >
    Lorem ipsum dolor sit amet consectetur
  </label>
</li>
`;

exports[`ListItem matches saved snapshot 2 1`] = `
<li
  className="list-item"
  data-testid="test-list-item-test-container"
>
  <label
    htmlFor="list-item-test"
  >
    Lorem ipsum dolor sit amet consectetur
  </label>
</li>
`;
